# test_readthedocs

./: .readthedocs.yaml  README.md  README.rst  lumache.py  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst
