[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lumache"
version = "0.1.0"
description = "A fictional Python library for the Read the Docs tutorial."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.rst"
requires-python = ">=3.8"
